# gutil

./: .gitignore  CMakeLists.txt  README.md  devenv.sh
example/: dbschema.cpp  ref_object.cpp  reflection.cpp  trial_util.cpp
include/: Reflection.hpp  singleton.hpp
include/gutil/: dbschema.hpp  ref_object.hpp  reflection.hpp  trial_util.hpp
